# angzarr-router

./: .gitignore  .mcp.json  Cargo.toml  README.md  buf.yaml  justfile  justfile.container
.claude/: settings.json
.claude/commands/: .ctxloom-manifest  check-triggers.md  discover.md  sequential-thinking-complex-problem.md  versionator-release.md  versionator-suggest-version.md  versionator-version-bump.md
.ctxloom/: config.yaml  lock.yaml  remotes.yaml
.ctxloom/profiles/: angzarr-router.yaml
.devcontainer/: Containerfile  devcontainer.json  post-create.sh
bindings/cpp/: .gitignore  CMakeLists.txt  buf.gen.yaml
bindings/cpp/conformance/: builders.h  counter_test.cpp  gherkin.cpp  gherkin.h  main.cpp  pm_test.cpp  projector_test.cpp  saga_test.cpp
bindings/cpp/include/angzarr/router/: coded_error.h  dispatch.h  ffi.h  router.h  statuses.h  support.h
bindings/cpp/src/: smoke.cpp
bindings/csharp/: .csharpierignore  .gitignore  Angzarr.Router.csproj  buf.gen.yaml
bindings/csharp/conformance/: Builders.cs  Conformance.csproj
bindings/csharp/conformance/Counter/: CounterFixture.cs  CounterSteps.cs
bindings/csharp/conformance/Pm/: PmFixture.cs  PmSteps.cs
bindings/csharp/conformance/Projector/: ProjectorFixture.cs  ProjectorSteps.cs
bindings/csharp/conformance/Saga/: SagaFixture.cs  SagaSteps.cs
bindings/csharp/src/: AggregateDispatch.cs  CodedError.cs  CommandContext.cs  Destinations.cs  Ffi.cs  GrpcCode.cs  Invoker.cs  Pack.cs  ProcessManagerDispatch.cs  ProjectorDispatch.cs  Rebuilder.cs  Router.cs  SagaDispatch.cs  Session.cs  Statuses.cs  Thunks.cs
bindings/go/: .gitignore  api.go  api_test.go  buf.gen.yaml  builders_test.go  dispatch_test.go  doc.go  ffirouter.go  ffirouter_test.go  fixture_test.go  go.mod  go.sum  process_manager_api.go  process_manager_steps_test.go  projector_api.go  projector_steps_test.go  property_test.go  saga_api.go  saga_steps_test.go  steps_test.go  trampoline.go
bindings/go/conformance/: builders_test.go  counter_steps_test.go  dispatch_test.go  fixtures_test.go  process_manager_steps_test.go  projector_steps_test.go  property_test.go  saga_steps_test.go
bindings/java/: .gitignore  buf.gen.yaml  build.gradle.kts  settings.gradle.kts
bindings/java/src/main/java/io/angzarr/router/: AggregateDispatch.java  CodedError.java  CommandContext.java  Destinations.java  Ffi.java  GrpcCode.java  Invoker.java  Pack.java  ProcessManagerDispatch.java  ProjectorDispatch.java  Rebuilder.java  Router.java  SagaDispatch.java  Session.java  Statuses.java  Thunks.java
bindings/java/src/test/java/io/angzarr/router/conformance/: Builders.java
bindings/java/src/test/java/io/angzarr/router/conformance/counter/: CounterFixture.java  CounterSteps.java  RunCounterConformance.java
bindings/java/src/test/java/io/angzarr/router/conformance/pm/: PMFixture.java  PMSteps.java  RunProcessManagerConformance.java
bindings/java/src/test/java/io/angzarr/router/conformance/projector/: ProjectorFixture.java  ProjectorSteps.java  RunProjectorConformance.java
bindings/java/src/test/java/io/angzarr/router/conformance/saga/: RunSagaConformance.java  SagaFixture.java  SagaSteps.java
bindings/python/: .gitignore  buf.gen.yaml  pyproject.toml
bindings/python/angzarr_router_ffi/: __init__.py  _abi.py  _dispatch.py
bindings/python/angzarr_router_ffi/tests/: builders.py  conftest.py  fixture.py  test_abi.py  test_concurrency.py  test_dispatch.py  test_framework_pool_coexistence.py  test_property.py
bindings/python/angzarr_router_ffi/tests/steps/: test_conformance.py  test_process_manager.py  test_projector.py  test_saga.py
bindings/python/scripts/: fixup_gen_imports.py
bindings/typescript/: .gitignore  .prettierignore  buf.gen.yaml  cucumber.mjs  package-lock.json  package.json  tsconfig.json
bindings/typescript/conformance/: builders.ts  fixtures.ts  steps.ts
bindings/typescript/src/: codedError.ts  destinations.ts  dispatch.ts  ffi.ts  grpcCode.ts  index.ts  pack.ts  rebuilder.ts  router.ts  session.ts  statuses.ts  thunks.ts
conformance/: FIXTURE.md
conformance/features/: counter.feature  process_manager.feature  projector.feature  saga.feature
conformance/fixtures/: command_failhard.txtpb  command_increase.txtpb  command_unhandled.txtpb  event_increased.txtpb
conformance/proto/test/counter/: counter.proto
crates/conformance/: Cargo.toml  build.rs
crates/conformance/src/: lib.rs
crates/conformance/tests/: cucumber.rs  process_manager.rs  projector.rs  saga.rs
crates/router/: Cargo.toml  build.rs
crates/router-ffi/: Cargo.toml  build.rs
crates/router-ffi/src/: abi.rs  abi.test.rs  lib.rs  lib.test.rs  proto.rs  registry.rs
crates/router/src/: aggregate.rs  aggregate.test.rs  destinations.rs  destinations.test.rs  error.rs  error.test.rs  lib.rs  lib.test.rs  process_manager.rs  process_manager.test.rs  projector.rs  projector.test.rs  proto.rs  rebuild.rs  rebuild.test.rs  saga.rs  saga.test.rs  test_support.rs
docs/: architecture.md  decision-shared-rust-router.md  plan-shared-router-bootstrap.md
proto/: buf.yaml
proto/angzarr/router/ffi/v1/: abi.proto
proto/google/rpc/: error_details.proto  status.proto
proto/io/angzarr/router/ffi/v1/: abi.proto
