[package]
name = "angzarr-router-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
angzarr-router = { path = "../router" }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { version = "0.14", features = ["text-format"] }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

[[test]]
name = "cucumber"
harness = false

[[test]]
name = "projector"
harness = false

[[test]]
name = "saga"
harness = false
